# ff-room

./: .gitignore  README.md  build.sh  pyproject.toml
cpp/: CMakeLists.txt
cpp/src/bindings/: module.cpp
cpp/src/core/: BoundaryManager.cpp  BoundaryManager.hpp  FluidSolver.cpp  FluidSolver.hpp  Grid.cpp  Grid.hpp  LBMSolver.cpp  LBMSolver.hpp  PoissonSolver.cpp  PoissonSolver.hpp
cpp/tests/: test_couette.cpp  test_grid.cpp  test_poisson.cpp
docs/: developer_guide.md  model_assumptions.md  user_guide.md
examples/: basic_room.yaml  run_basic.py  run_cooling.py  summer_cooling.yaml  two_fans.yaml
python/ff_room/: __init__.py  animation.py  config.py  io.py  scene.py  solver_bridge.py  visualization.py
python/tests/: test_config.py  test_postprocess.py
results/: basic_room.npz  basic_room_velocity.csv  cooling_log.jsonl  experiment_log.jsonl  summer_cooling.npz
