[build-system]
requires = ["scikit-build-core>=0.6", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "ff-room"
version = "0.1.0"
description = "3D indoor airflow simulation (CFD) with PyVista visualization"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "pyvista>=0.43",
]

[project.optional-dependencies]
dev = ["pytest>=7", "catch2"]

[tool.scikit-build]
cmake.source-dir = "cpp"
cmake.build-type = "Release"
wheel.packages = ["python/ff_room"]
install.components = ["python"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
